up start shell